--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,4 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-.idea/libraries/Dart_Packages.xml
+.idea/libraries/
